changed start training button from instagram to timer

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </table>
 
             <div class="button-group">
-                <a href="https://www.instagram.com/boks_klub_predator/" target="_blank"><button class="btn-main">START TRAINING</button></a>
+                <a href="timer.html" class="btn">Start Training</a>
                 <a href="#gallery"><button class="btn-secondary">VIEW GALLERY</button></a>
             </div>
 
