--- a/index.html
+++ b/index.html
@@ -61,8 +61,17 @@
 
             .button-group { display: flex; gap: 10px; justify-content: center; margin: 20px 0; flex-wrap: wrap; }
             .btn-main, .btn-secondary { 
-                padding: 15px 25px; font-family: 'Oswald', sans-serif; font-weight: 700; 
-                text-transform: uppercase; border-radius: 5px; cursor: pointer; transition: 0.3s; 
+    display: inline-block;    /* 1. Makes the link respect height/padding */
+    text-decoration: none;   /* 2. Removes the blue underline */
+    line-height: 1;          /* 3. Centers the text vertically */
+    padding: 15px 25px; 
+    font-family: 'Oswald', sans-serif; 
+    font-weight: 700; 
+    text-transform: uppercase; 
+    border-radius: 5px; 
+    cursor: pointer; 
+    transition: 0.3s; 
+}
             }
             .btn-main { background: #d40000; color: white; border: none; }
             .btn-secondary { background: transparent; color: white; border: 2px solid white; }
@@ -116,8 +125,8 @@
             </table>
 
             <div class="button-group">
-                <a href="timer.html" class="btn">Start Training</a>
-                <a href="#gallery"><button class="btn-secondary">VIEW GALLERY</button></a>
+                <a href="timer.html" class="btn-main">Start Training</a>
+                <a href="#gallery" class="btn-secondary">View Gallery</a>
             </div>
 
             <div class="contact-info">
