--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
                 margin-top: 15px; font-size: 1.3rem; color: #ffcc00; font-weight: bold; min-height: 1.5rem;
             }
 
-            /* 4. TABLE & BUTTONS */
-            table { width: 100%; margin: 20px 0; border-collapse: collapse; }
-            th { color: #d40000; padding: 10px; border-bottom: 2px solid #333; }
-            td { padding: 12px; border-bottom: 1px solid rgba(255,255,255,0.05); }
+           /* 4. TABLE & BUTTONS */
+table { width: 100%; margin: 20px 0; border-collapse: collapse; }
+th { color: #d40000; padding: 10px; border-bottom: 2px solid #333; }
+td { padding: 12px; border-bottom: 1px solid rgba(255,255,255,0.05); }
 
-            .button-group { display: flex; gap: 10px; justify-content: center; margin: 20px 0; flex-wrap: wrap; }
-            .btn-main, .btn-secondary { 
-    display: inline-block;    /* 1. Makes the link respect height/padding */
-    text-decoration: none;   /* 2. Removes the blue underline */
-    line-height: 1;          /* 3. Centers the text vertically */
+.button-group { display: flex; gap: 10px; justify-content: center; margin: 20px 0; flex-wrap: wrap; }
+
+.btn-main, .btn-secondary { 
+    display: inline-block;    /* This gives it the "frame" shape */
+    text-decoration: none;   /* This removes the underline */
     padding: 15px 25px; 
     font-family: 'Oswald', sans-serif; 
     font-weight: 700; 
@@ -71,13 +71,21 @@
     border-radius: 5px; 
     cursor: pointer; 
     transition: 0.3s; 
+    text-align: center;
 }
-            }
-            .btn-main { background: #d40000; color: white; border: none; }
-            .btn-secondary { background: transparent; color: white; border: 2px solid white; }
-            .btn-main:hover { transform: scale(1.05); background: #ff0000; }
-            .btn-secondary:hover { background: white; color: black; }
 
+/* Force the text to stay white even if the link was clicked */
+.btn-main, .btn-main:visited, 
+.btn-secondary, .btn-secondary:visited { 
+    color: white !important; 
+}
+
+.btn-main { background: #d40000; border: none; }
+.btn-secondary { background: transparent; border: 2px solid white; }
+
+.btn-main:hover { transform: scale(1.05); background: #ff0000; color: white; }
+.btn-secondary:hover { background: white; color: black !important; }
+            
             /* GALLERY & MODAL */
             .photo-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 8px; margin: 20px 0; }
             .photo-item { aspect-ratio: 1/1; overflow: hidden; border-radius: 5px; cursor: zoom-in; }
