--- a/timer.html
+++ b/timer.html
@@ -32,30 +32,30 @@
             text-shadow: 2px 2px 5px rgba(0,0,0,1);
             font-weight: bold;
         }
-        .controls button {
-            background: rgba(34, 34, 34, 0.8);
-            border: 2px solid #d40000;
-            color: white;
-            padding: 15px 30px;
-            font-size: 1.2rem;
-            cursor: pointer;
-            margin: 5px;
-            border-radius: 10px;
-            backdrop-filter: blur(5px);
-        }
-        .controls button:hover { background: #d40000; }
-        .back-btn {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            color: #aaa;
-            text-decoration: none;
-            font-size: 1rem;
-            border: 1px solid #444;
-            padding: 5px 15px;
-            border-radius: 5px;
-            background: rgba(0,0,0,0.5);
-        }
+        .controls {
+    display: flex;
+    justify-content: center;
+    gap: 15px; /* Adds space between buttons */
+    margin-top: 20px;
+    flex-wrap: wrap; /* Helps buttons stack if the phone is small */
+}
+
+.controls button {
+    padding: 15px 25px;
+    font-size: 1.1rem;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
+    border: none;
+    background-color: #d40000; /* Predator Red */
+    color: white;
+    transition: transform 0.2s;
+    min-width: 100px; /* Makes them easy to hit */
+}
+
+.controls button:active {
+    transform: scale(0.95); /* Little 'click' feel when you tap */
+}
     </style>
 </head>
 <body>
@@ -69,7 +69,6 @@
         <button onclick="startTimer()">START</button>
         <button onclick="pauseTimer()">PAUSE</button>
         <button onclick="resetTimer()">RESET</button>
-        <button onclick="setShortRound()">Short Round (1 min)</button>
     </div>
 
     <div id="history-section" style="margin-top: 30px; width: 80%; max-width: 400px; text-align: center;">
