Removed all Instagram redirects and fixed timer link

--- a/predator.html
+++ b/predator.html
@@ -201,8 +201,7 @@
                 </tr>
             </table>
             
-            <a href="https://www.instagram.com/boks_klub_predator/" target="_blank">
-                <button>START TRAINING</button>
+            <a href="timer.html" class="btn-main">START TRAINING</a> <button>START TRAINING</button>
             </a>
 
             <div class="contact-info">
