--- a/timer.html
+++ b/timer.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Predator Timer</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <style>
         body {
             background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('mali.jpg');
