--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Predator Boxing Club | Makarska</title>
+        <meta name="description" content="Prvi boks klub u povijesti Makarske. Kontakt: +385 95 843 7135.">
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="favicon.png">
         
