Fixed CSS syntax error and updated timer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Predator Boxing Club | Makarska</title>
-        <meta name="description" content="Prvi boks klub u povijesti Makarske. Kontakt: +385 95 843 7135.">
+        <meta name="description" content="Prvi boksački klub u povijesti Makarske. Kontakt: +385 95 843 7135.">
+        <meta name="keywords" content="boks, makarska, boks klub predator, trening, hbs">
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="favicon.png">
         
