--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@ td { padding: 12px; border-bottom: 1px solid rgba(255,255,255,0.05); }
                 <div class="photo-item"><img src="gym12.jpg" onclick="openModal(this)"></div>
                 <div class="photo-item"><img src="gym13.jpg" onclick="openModal(this)"></div>
                 <div class="photo-item"><img src="gym14.jpg" onclick="openModal(this)"></div>
+                <div class="photo-item"><img src="gym15.jpg" onclick="openModal(this)"></div>
+
             </div>
             </div>
 
